# WorldGen

./: Cargo.toml  README.md  config.toml
crates/finvec/: Cargo.toml
crates/finvec/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: gui.rs  lib.rs  painter.rs  tessellation.rs
crates/frontend/src/polymap/: element_set.rs  map_shader.rs  mod.rs
crates/parameters/: Cargo.toml
crates/parameters/src/: lib.rs
crates/polymap/: Cargo.toml
crates/polymap/src/: compute.rs  element_set.rs  field.rs  lib.rs  map_shader.rs  painter.rs
crates/world/: Cargo.toml
crates/world/src/: biome.rs  lib.rs  measure.rs  spatial_function.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: biome.rs  conf.rs  defs.rs  generators.rs  heightmap.rs  hydrology.rs  lib.rs  rivers.rs  thermology.rs  view.rs  world_map.rs
src/: main.rs
