[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"

rand = { version = "*", features = ["small_rng"]}

serde = "*"
serde_derive = "*"
toml = "*"

polymap = { path = "../polymap" }
worldgen = { path = "../worldgen"}

