[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

macroquad = "0.3"
egui = "0.15"
egui-macroquad = "*"
lyon = "0.17"

rand = { version = "0.8.*", features = ["small_rng"]}

serde = "1.0"
serde_derive = "*"
toml = "*"

polymap = { path = "../polymap" }
worldgen = { path = "../worldgen"}

