[package]
name = "polymap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "*" }
rand = { version = "*", features = ["small_rng"]}
lyon = "*"
fast_poisson = "*"
voronator = "*"
geo = "*"
quadtree_rs = "*"
