[package]
name = "polymap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"

rand = { version = "0.8.*", features = ["small_rng"]}

fast_poisson = "*"
voronator = "*"
geo = "0.18"
rayon = "1.5"
